force-app/main/default/objects/Payments__c/Payments__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>