force-app/main/default/objects/Payments__c/fields/Tenants__c.field-meta.xml
<CustomField>
    <fullName>Tenants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>